fix arrows on safari

--- a/article.less
+++ b/article.less
@@ -655,6 +655,7 @@ nav p {
 
 .nav-arrow {
   font-size: 2em;
+  font-family: @serif;
   //display:block;
 }
 
